--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -13,8 +13,11 @@
         <td>HIGH</td>
         <td>2001-11-01</td>
     </tr>
+    <tr class="data-row">
+        <td *ngFor = "let satellite of displayList">{{satellite.name}}</td>
+    </tr>
 </table>
 
 <!-- TODO 2b: use *ngFor to display satellite data in the table -->
 <!-- TODO 3b: add style directive to conditionally highlight satellite type -->
-
+<td *ngFor = "let satellite of displayList ">{{satellite.name}}, {{satellite.type}}, {{satellite.Launchdate}}</td>
